--- a/src/my-element.scss
+++ b/src/my-element.scss
@@ -1,3 +1,9 @@
-div {
-  color: blue;
-}
+// @import "@govtechsg/sgds/sass/_buttons.scss";
+// @import "~@govtechsg/sgds/sass/sgds.scss";
+// @import "~@govtechsg/sgds/sass/sgds-theme/components/buttons.scss";
+@import './base.scss';
+
+// @import "~bootstrap/scss/bootstrap.scss";
+@import "~clk-styletest/sass/buttons"; 
+
+//38.2kb
