wip add test, tesitng position

--- a/src/Button/button-element.scss
+++ b/src/Button/button-element.scss
@@ -1,7 +1,7 @@
 // @import "@govtechsg/sgds/sass/_buttons.scss";
 // @import "~@govtechsg/sgds/sass/sgds.scss";
 // @import "~@govtechsg/sgds/sass/sgds-theme/components/buttons.scss";
-@import './base.scss';
+@import '../base.scss';
 
 // @import "~bootstrap/scss/bootstrap.scss";
 @import "~clk-styletest/sass/buttons"; 
