chore(rollup): configure subpath imports

--- a/src/Footer/footer.scss
+++ b/src/Footer/footer.scss
@@ -1,4 +1,4 @@
-@import "../base.scss";
+@import "../utils/base.scss";
 @import "~clk-styletest/sass/containers";
 @import "~clk-styletest/sass/grid";
 @import "~clk-styletest/sass/footer";
