--- a/src/Button/button-element.scss
+++ b/src/Button/button-element.scss
@@ -1,9 +1,4 @@
-// @import "@govtechsg/sgds/sass/_buttons.scss";
-// @import "~@govtechsg/sgds/sass/sgds.scss";
-// @import "~@govtechsg/sgds/sass/sgds-theme/components/buttons.scss";
-@import '../base.scss';
 
-// @import "~bootstrap/scss/bootstrap.scss";
+@import '../utils/base.scss';
 @import "~clk-styletest/sass/buttons"; 
 
-//38.2kb
