--- a/src/utils/base.scss
+++ b/src/utils/base.scss
@@ -14,14 +14,14 @@
 @import "~clk-styletest/sass/utilities/api";
 
 :root,:host{
-    --sgds-masthead-font-family:system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --sgds-masthead-background-color:hsl(0, 0%, 94%);
-    --sgds-masthead-text-color:hsl(0, 0%, 28%);
-    --sgds-masthead-identify-color:#2f60ce;
-    --sgds-masthead-identify-hover-color:#23489b;
-    --sgds-masthead-link-color:#4372d6;
-    --sgds-masthead-link-hover-color:#3a79ff;
-    --sgds-masthead-tablet-padding-x:1.25rem;
-    --sgds-masthead-tablet-font-size:0.75rem;
-    --sgds-masthead-mobile-font-size:0.6875rem;
-    --sgds-masthead-crest-color:rgb(239, 51, 32)}
+    --sgds-masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --sgds-masthead-background-color: hsl(0, 0%, 94%);
+    --sgds-masthead-text-color: hsl(0, 0%, 28%);
+    --sgds-masthead-link-color: #2f60ce;
+    --sgds-masthead-identify-hover-color: hsl(222, 63%, 37%);
+    --sgds-masthead-link-hover-color: hsl(221, 64%, 55%);
+    --sgds-masthead-tablet-padding-x: 1.25rem;
+    --sgds-masthead-tablet-font-size: 0.75rem;
+    --sgds-masthead-mobile-font-size: 0.6875rem;
+    --sgds-masthead-crest-color: rgb(239, 51, 32);
+}
