--- a/src/SideNav/sidenav-item.scss
+++ b/src/SideNav/sidenav-item.scss
@@ -8,15 +8,14 @@
 @import "~clk-styletest/sass/transitions";
 @import "~clk-styletest/sass/accordion";
 
-
-.sidenav {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
-    gap: 1rem;
-    width: auto;
-    font-size: 1rem;
-}
+// .sidenav {
+//     display: flex;
+//     flex-direction: column;
+//     list-style: none;
+//     gap: 1rem;
+//     width: auto;
+//     font-size: 1rem;
+// }
 
 
 .sidenav-btn {
@@ -29,6 +28,9 @@
   padding: 0.5rem 1rem;
   border-left: $navbar-border-bottom-height solid transparent;
   border-radius: 0;
+  display: flex;
+  align-items: center;
+
 
   &.active,
   &:hover {
@@ -36,11 +38,25 @@
     border-left-color: $sidenav-color;
     font-weight: $font-weight-bold;
   }
+  svg {
+    &.bi-chevron-down {
+      @extend .ms-auto;
+      transition: all 0.3s ease-in-out;
+        transform: rotate(180deg);
+    }
+  }
+  &:not(.active) {
+    svg {
+      transform: rotate(0deg);
+    }
+  }
 }
 
 a.sidenav-btn {
   color: inherit;
   text-decoration: none;
+  line-height: 1.5rem;
+
 }
 
 
@@ -48,9 +64,10 @@ a.sidenav-btn {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  // gap: 1rem;
   padding-left: 0;
   margin: 0;
+  line-height: 2rem;
 }
 
 
@@ -59,3 +76,5 @@ a.sidenav-btn {
 .collapsing {
   margin-top: $sidenav-item-spacing;
 }
+
+
