refactor(sidenav): cleanup component

--- a/src/SideNav/sidenav-link.scss
+++ b/src/SideNav/sidenav-link.scss
@@ -4,7 +4,7 @@
 a.nav-link {
   display: block;
     color: inherit;
-    font-size: inherit;
+    font-size: $sidenav-fontsize;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-left: calc(
