--- a/src/SideNav/sidenav-item.scss
+++ b/src/SideNav/sidenav-item.scss
@@ -1,28 +1,11 @@
-// @import "~clk-styletest/sass/functions";
-// @import "~clk-styletest/sass/variables";
-// @import "~clk-styletest/sass/mixin";
-// @import "~clk-styletest/sass/buttons";
-
 @import "../utils/base.scss";
-@import "~clk-styletest/sass/buttons";
 @import "~clk-styletest/sass/transitions";
-@import "~clk-styletest/sass/accordion";
-
-// .sidenav {
-//     display: flex;
-//     flex-direction: column;
-//     list-style: none;
-//     gap: 1rem;
-//     width: auto;
-//     font-size: 1rem;
-// }
-
 
 .sidenav-btn {
   width: 100%;
   text-align: initial;
   line-height: 1.5rem;
-  font-size: inherit;
+  font-size: $sidenav-fontsize;
   border: 0;
   background: 0;
   padding: 0.5rem 1rem;
@@ -30,7 +13,6 @@
   border-radius: 0;
   display: flex;
   align-items: center;
-
 
   &.active,
   &:hover {
@@ -42,12 +24,14 @@
     &.bi-chevron-down {
       @extend .ms-auto;
       transition: all 0.3s ease-in-out;
-        transform: rotate(180deg);
+      transform: rotate(180deg);
     }
   }
   &:not(.active) {
     svg {
-      transform: rotate(0deg);
+      &.bi-chevron-down {
+        transform: rotate(0deg);
+      }
     }
   }
 }
@@ -56,25 +40,19 @@ a.sidenav-btn {
   color: inherit;
   text-decoration: none;
   line-height: 1.5rem;
-
 }
-
 
 .sidenav-list {
   list-style: none;
   display: flex;
   flex-direction: column;
-  // gap: 1rem;
   padding-left: 0;
   margin: 0;
   line-height: 2rem;
 }
-
 
 .collapse,
 .collapse.show,
 .collapsing {
   margin-top: $sidenav-item-spacing;
 }
-
-
