--- a/src/SideNav/sidenav.scss
+++ b/src/SideNav/sidenav.scss
@@ -1,7 +1,6 @@
-.sidenav {
+ul {
     display: flex;
     flex-direction: column;
-    list-style: none;
     gap: 1rem;
-    width: auto;
+    list-style: none;
 }
