style(*): replace clk-styletest with  sgds@2.1.0-beta

--- a/src/Footer/footer.scss
+++ b/src/Footer/footer.scss
@@ -1,5 +1,5 @@
 @import "../utils/base.scss";
-@import "~clk-styletest/sass/containers";
-@import "~clk-styletest/sass/grid";
-@import "~clk-styletest/sass/footer";
+@import "~@govtechsg/sgds/sass/containers";
+@import "~@govtechsg/sgds/sass/grid";
+@import "~@govtechsg/sgds/sass/footer";
 
