--- a/src/Masthead/masthead.scss
+++ b/src/Masthead/masthead.scss
@@ -1,6 +1,6 @@
 @import "../utils/base.scss";
-@import "~clk-styletest/sass/containers";
-@import "~clk-styletest/sass/grid";
+@import "~@govtechsg/sgds/sass/containers";
+@import "~@govtechsg/sgds/sass/grid";
 
 :host{
     --masthead-font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif;
