--- a/src/SideNav/sidenav-item.scss
+++ b/src/SideNav/sidenav-item.scss
@@ -1,5 +1,5 @@
 @import "../utils/base.scss";
-@import "~clk-styletest/sass/transitions";
+@import "~@govtechsg/sgds/sass/transitions";
 @import "~bootstrap-icons/font/fonts/bootstrap-icons.css";
 
 :host   {
