--- a/src/utils/base.scss
+++ b/src/utils/base.scss
@@ -1,15 +1,15 @@
 
 // @charset "utf-8";
 
-@import "~clk-styletest/sass/functions";
-@import "~clk-styletest/sass/variables";
-@import "~clk-styletest/sass/mixins";
+@import "~@govtechsg/sgds/sass/functions";
+@import "~@govtechsg/sgds/sass/variables";
+@import "~@govtechsg/sgds/sass/mixins";
 
-@import "~clk-styletest/sass/utilities";
+@import "~@govtechsg/sgds/sass/utilities";
 
-@import "~clk-styletest/sass/root";
-@import "~clk-styletest/sass/reboot";
-@import "~clk-styletest/sass/type";
-@import "~clk-styletest/sass/helpers";
-@import "~clk-styletest/sass/utilities/api";
+@import "~@govtechsg/sgds/sass/root";
+@import "~@govtechsg/sgds/sass/reboot";
+@import "~@govtechsg/sgds/sass/type";
+@import "~@govtechsg/sgds/sass/helpers";
+@import "~@govtechsg/sgds/sass/utilities/api";
 
