--- a/src/Dropdown/dropdown.scss
+++ b/src/Dropdown/dropdown.scss
@@ -1,5 +1,3 @@
-// @import "../utils/base.scss";
-// @import "~@govtechsg/sgds/sass/transitions";
-// @import "~@govtechsg/sgds/sass/dropdown";
-@import "~@govtechsg/sgds/sass/sgds";
-@import "~bootstrap/scss/bootstrap";
+@import "../utils/base.scss";
+@import "~@govtechsg/sgds/sass/dropdown";
+@import "~@govtechsg/sgds/sass/buttons";
