feat(sidenav): add disabled props to sidenavlink and sidenavitem

--- a/src/Sidenav/sgds-sidenav-item.scss
+++ b/src/Sidenav/sgds-sidenav-item.scss
@@ -25,6 +25,10 @@
     border-left-color: var(--sidenav-theme-color);
     font-weight: $font-weight-bold;
   }
+  &.disabled{
+      opacity: 0.65;
+      pointer-events: none;
+  }
   svg {
     &.bi-chevron-down {
       @extend .ms-auto;
