feat(textarea): add resize attribute

--- a/src/Textarea/sgds-textarea.scss
+++ b/src/Textarea/sgds-textarea.scss
@@ -14,3 +14,10 @@
 .form-group{
     line-height: var(--sgds-body-line-height);
 }
+
+.textarea-resize-none{
+    resize: none;
+}
+.textarea-resize-vertical {
+    resize: vertical;
+}
