refactor(input): add line height to label and text

--- a/src/Input/sgds-input.scss
+++ b/src/Input/sgds-input.scss
@@ -11,6 +11,10 @@
     --sgds-body-line-height: 2rem;
 }
 
-.form-group{
-    line-height: var(--sgds-body-line-height);
+.form{
+    &-label,
+    &-text
+    {
+        line-height: var(--sgds-body-line-height);
+    }
 }
