--- a/src/Button/sgds-button.scss
+++ b/src/Button/sgds-button.scss
@@ -4,4 +4,18 @@
 
 :host {
     display: inline-block;
+}
+
+:host(.button-group_button-first){
+  .btn{
+    border-start-end-radius: 0;
+    border-end-end-radius: 0;
   }
+}
+
+:host(.button-group_button-last){
+  .btn{
+    border-start-start-radius: 0;
+    border-end-start-radius: 0;
+  }
+}
