feat(button): added icon variant

--- a/src/Button/sgds-button.scss
+++ b/src/Button/sgds-button.scss
@@ -4,4 +4,12 @@
 
 :host {
     display: inline-block;
+}
+
+.btn-icon{
+  background: transparent;
+  border: 0;
+  &:hover{
+    background: transparent;
   }
+}
