--- a/src/Alert/sgds-alert.scss
+++ b/src/Alert/sgds-alert.scss
@@ -5,6 +5,6 @@
   --alert-link-color: #2a3343;
 }
 
-::slotted(a.alert-link) {
+sgds-alert ::slotted(a) {
   color: var(--alert-link-color) !important;
 }
