feat(accordion): add accordion

--- a/src/Accordion/sgds-accordion.scss
+++ b/src/Accordion/sgds-accordion.scss
@@ -10,3 +10,7 @@
     display: block;
     padding: $accordion-button-padding-y $accordion-button-padding-x;
   }
+
+  .accordion-button:not(.collapsed){
+    box-shadow: none;
+  }
