--- a/src/Alert/sgds-alert.scss
+++ b/src/Alert/sgds-alert.scss
@@ -23,7 +23,7 @@
   .alert-#{$state} {
     @include alert-variant($alert-background, $alert-border, $alert-color);
 
-    ::slotted(sl-icon),
+    ::slotted(sgds-icon),
     ::slotted(i) {
       color: map-get($map: $value, $key: #{$state}-600);
     }
