--- a/src/Card/sgds-action-card.scss
+++ b/src/Card/sgds-action-card.scss
@@ -6,7 +6,7 @@
     &.card {
       &[variant*="card-action"] {
         .card-body {
-          sl-icon {
+          sgds-icon {
             font-size: 1.5rem;
             margin-right: 1rem;
           }
