Revert "test(icon): spike icon component"
This reverts commit 68038fcfa77857c997eabed160d1d130e5b63863.

--- a/src/Alert/sgds-alert.scss
+++ b/src/Alert/sgds-alert.scss
@@ -23,7 +23,7 @@
   .alert-#{$state} {
     @include alert-variant($alert-background, $alert-border, $alert-color);
 
-    ::slotted(sgds-icon),
+    ::slotted(sl-icon),
     ::slotted(i) {
       color: map-get($map: $value, $key: #{$state}-600);
     }
