refactor(*): spike reusing parent class styles to reduce css duplication

--- a/src/components/Mainnav/sgds-mainnav-dropdown.scss
+++ b/src/components/Mainnav/sgds-mainnav-dropdown.scss
@@ -1,13 +1,11 @@
-@import "./sgds-mainnav-item.scss";
-@import "../Dropdown/sgds-dropdown.scss";
 
 .nav-link {
     gap: 1rem;
 }
 .dropdown-menu {
     margin-top: 0;
-    border: 1px solid rgba($black, .1);
+    border: 1px solid rgba(#000, .1);
     border-radius: 0 0 5px 5px;
-    background-color: $white;
-    box-shadow: 0 .5rem 1rem rgba($black, .15);
+    background-color: #fff;
+    box-shadow: 0 .5rem 1rem rgba(#000, .15);
 }
