--- a/src/components/Sidenav/sgds-sidenav-item.scss
+++ b/src/components/Sidenav/sgds-sidenav-item.scss
@@ -1,6 +1,3 @@
-@import "../../utils/base.scss";
-@import "~@govtechsg/sgds/sass/transitions";
-@import "~bootstrap-icons/font/fonts/bootstrap-icons.css";
 
 :host   {
   --sidenav-theme-color: #5925DC;
@@ -14,7 +11,7 @@
   border: 0;
   background: 0;
   padding: 0.5rem 1rem;
-  border-left: $navbar-border-bottom-height solid transparent;
+  border-left: 0.125rem solid transparent;
   border-radius: 0;
   display: flex;
   align-items: center;
@@ -23,7 +20,7 @@
   &:hover {
     color: var(--sidenav-theme-color);
     border-left-color: var(--sidenav-theme-color);
-    font-weight: $font-weight-bold;
+    font-weight: 700;
   }
   &.disabled{
       opacity: 0.65;
@@ -31,7 +28,7 @@
   }
   svg {
     &.bi-chevron-down {
-      @extend .ms-auto;
+      margin-left: auto;
       transition: all 0.3s ease-in-out;
       transform: rotate(180deg);
     }
@@ -63,7 +60,7 @@ a.sidenav-btn {
 .collapse,
 .collapse.show,
 .collapsing {
-  margin-top: $sidenav-item-spacing;
+  margin-top: 1rem;
 }
 
 ::slotted(*[slot="title"]) {
