--- a/src/components/Mainnav/sgds-mainnav.scss
+++ b/src/components/Mainnav/sgds-mainnav.scss
@@ -1,18 +1,21 @@
 :host{
   --mainnav-background-color: white;
-  --maninav-padding-x: 1rem;
+  --mainnav-padding-x: 1rem;
   --mainnav-padding-y: 0;
   --mainnav-mobile-padding-x: 0.5rem;
   --mainnav-mobile-padding-y: 0;
+  --mainnav-borderBottom-width: 1px;
+  //TODO possible upgrade to bs5.2 for gray color css variables. hard code for now
+  --mainnav-borderBottom-color: #98a2b3;
 }
 
 .sgds{
   &.navbar{
     background-color: var(--mainnav-background-color);
-    padding: var(--maninav-padding-y) var(--maninav-padding-x);
-
+    padding: var(--mainnav-padding-y) var(--mainnav-padding-x);
+    border-bottom: var(--mainnav-borderBottom-width) solid var(--mainnav-borderBottom-color);
     @media (max-width: 768px) { 
-      padding: var(--maninav-mobile-padding-y) var(--mainnav-mobile-padding-x);
+      padding: var(--mainnav-mobile-padding-y) var(--mainnav-mobile-padding-x);
     }
   }
 }
